# understandable

./: .gitignore  Cargo.toml  README.md  cliff.toml
.antigravity/: INSTALL.md
.claude-plugin/: INSTALL.md  marketplace.json  plugin.json
.codex/: INSTALL.md
.copilot-plugin/: INSTALL.md  plugin.json
.cursor-plugin/: INSTALL.md  plugin.json
.gemini/: INSTALL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.openclaw/: INSTALL.md
.opencode/: INSTALL.md
.pi/: INSTALL.md
agents/: architecture-analyzer.md  article-analyzer.md  assemble-reviewer.md  domain-analyzer.md  graph-reviewer.md  knowledge-graph-guide.md  project-scanner.md
crates/ua-analyzer/: Cargo.toml
crates/ua-analyzer/src/: change_classifier.rs  domain.rs  graph_builder.rs  knowledge.rs  language_lesson.rs  layer_detector.rs  lib.rs  normalize.rs  tour_generator.rs
crates/ua-analyzer/tests/: builder.rs  layer_llm.rs  normalize.rs
crates/ua-cli/: Cargo.toml
crates/ua-cli/src/: builders.rs  commands.rs  main.rs  util.rs
crates/ua-cli/src/builders/: diff_analyzer.rs  explain_builder.rs  onboard_builder.rs
crates/ua-cli/src/commands/: analyze.rs  chat.rs  dashboard.rs  diff.rs  domain.rs  embed.rs  explain.rs  export.rs  extract.rs  fingerprint.rs  import.rs  init.rs  knowledge.rs  merge.rs  onboard.rs  scan.rs  search.rs  staleness.rs  usage.rs  validate.rs
crates/ua-cli/src/util/: time.rs
crates/ua-cli/tests/: builders.rs  diff_rename.rs  onboard_builder.rs  skill_command_lint.rs
crates/ua-core/: Cargo.toml
crates/ua-core/src/: edge.rs  error.rs  graph.rs  lib.rs  meta.rs  node.rs  plugin.rs  settings.rs  validate.rs
crates/ua-core/tests/: roundtrip.rs  settings_cascade.rs  types.rs
crates/ua-extract/: Cargo.toml
crates/ua-extract/src/: framework.rs  language.rs  lib.rs  parsers.rs  plugin.rs  registry.rs  structural.rs  tree_sitter_plugin.rs
crates/ua-extract/src/parsers/: dockerfile.rs  env.rs  graphql.rs  ini.rs  json.rs  makefile.rs  markdown.rs  protobuf.rs  shell.rs  sql.rs  terraform.rs  toml.rs  yaml.rs
crates/ua-extract/src/tree_sitter_plugin/: queries.rs
crates/ua-extract/src/tree_sitter_plugin/queries/: bash.rs  c.rs  cmake.rs  cpp.rs  csharp.rs  cuda.rs  d.rs  dart.rs  elixir.rs  elm.rs  erlang.rs  fish.rs  fortran.rs  fsharp.rs  glsl.rs  go.rs  groovy.rs  haskell.rs  hcl.rs  hlsl.rs  java.rs  javascript.rs  jq.rs  julia.rs  lua.rs  make.rs  nix.rs  objc.rs  ocaml.rs  perl.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  scheme.rs  solidity.rs  swift.rs  typescript.rs  verilog.rs  (+3 more)
crates/ua-extract/tests/: capture_overlap.rs  extract.rs  framework.rs  non_code.rs  non_code_parsers.rs
crates/ua-llm/: Cargo.toml
crates/ua-llm/src/: anthropic.rs  batch.rs  embeddings.rs  lib.rs  local.rs  models.rs  prompts.rs  provider.rs  retry.rs
crates/ua-llm/tests/: embeddings_auth.rs
crates/ua-persist/: Cargo.toml
crates/ua-persist/src/: archive.rs  fingerprint.rs  gitignore.rs  ignore_filter.rs  layout.rs  lib.rs  staleness.rs  storage.rs
crates/ua-persist/tests/: atomic_zst.rs  embeddings.rs  fingerprint_modtime.rs  gitignore.rs  ignore.rs  incremental_delete.rs  large_graph.rs  llm_cache_e2e.rs  project_root.rs  regression_atomic_compress.rs  regression_project_root.rs  regression_storage_close.rs  storage.rs  vector_search.rs
crates/ua-search/: Cargo.toml
crates/ua-search/src/: context.rs  engine.rs  lib.rs
crates/ua-search/tests/: cache.rs  regression_utf32_replace.rs  search.rs  threshold.rs
crates/ua-server/: Cargo.toml  build.rs
crates/ua-server/src/: assets.rs  lib.rs  routes.rs  state.rs
crates/ua-server/src/routes/: api.rs
crates/ua-server/tests/: api.rs  cors.rs  live_reload.rs  routes_extra.rs  source.rs
dashboard/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dashboard/public/: knowledge-graph.json
dashboard/src/: App.tsx  index.css  store.ts
dashboard/src/components/: Breadcrumb.tsx  BrowsePanel.tsx  CodeViewer.tsx  CustomNode.tsx  DiffToggle.tsx  DomainClusterNode.tsx  DomainGraphView.tsx  ExportMenu.tsx  FilterPanel.tsx  FlowNode.tsx  GraphView.tsx  KeyboardShortcutsHelp.tsx  KindSwitcher.tsx  KnowledgeGraphView.tsx  LayerClusterNode.tsx  LayerLegend.tsx  LearnPanel.tsx  NodeInfo.tsx  NodeTooltip.tsx  PathFinderModal.tsx  PersonaSelector.tsx  PortalNode.tsx  ProjectOverview.tsx  SearchBar.tsx  StepNode.tsx  ThemePicker.tsx  TokenGate.tsx  WarningBanner.tsx
dashboard/src/core/: schema.ts  search.ts  types.ts
dashboard/src/hooks/: useKeyboardShortcuts.ts
dashboard/src/themes/: ThemeContext.tsx  index.ts  presets.ts  theme-engine.ts  types.ts
dashboard/src/utils/: edgeAggregation.ts  filters.ts  layout.ts  layout.worker.ts
hooks/: auto-update-prompt.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: file-analyzer.md  tour-builder.md
plugin/hooks/: hooks.json
plugin/skills/understand/: SKILL.md
plugin/skills/understand-chat/: SKILL.md
plugin/skills/understand-dashboard/: SKILL.md
plugin/skills/understand-knowledge/: SKILL.md
plugin/skills/understand-setup/: SKILL.md
skills/install-understandable/: SKILL.md
skills/understand/: SKILL.md
skills/understand-chat/: SKILL.md
skills/understand-dashboard/: SKILL.md
skills/understand-diff/: SKILL.md
skills/understand-domain/: SKILL.md
skills/understand-explain/: SKILL.md
skills/understand-knowledge/: SKILL.md
skills/understand-onboard/: SKILL.md
skills/understand-setup/: SKILL.md
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: architecture.md  intro.md
website/docs/cli/: analyze.md  dashboard.md  embed.md  init.md
website/docs/getting-started/: first-graph.md  install.md
website/i18n/en/: code.json
website/i18n/en/docusaurus-theme-classic/: footer.json  navbar.json
website/i18n/ru/: code.json
website/i18n/ru/docusaurus-theme-classic/: footer.json  navbar.json
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
(+8 files in other folders)
