[package]
name = "ua-persist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IndraDB + usearch + tar.zst storage for the knowledge graph."

[dependencies]
ua-core     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
indradb-lib = { workspace = true }
usearch     = { workspace = true }
tar         = { workspace = true }
bincode     = { workspace = true }
uuid        = { workspace = true }
rmp-serde   = { workspace = true }
bytemuck    = { workspace = true }
zstd        = { workspace = true }
blake3      = { workspace = true }
ignore      = { workspace = true }
tempfile    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
zstd  = { workspace = true }
tar   = { workspace = true }
tempfile = { workspace = true }
