[package]
name = "ua-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fuzzy search and chat-context builder over the knowledge graph."

[dependencies]
ua-core        = { workspace = true }
nucleo-matcher = { workspace = true }
serde          = { workspace = true }
