[package]
name = "ua-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "axum dashboard server with embedded React build."

[dependencies]
ua-core    = { workspace = true }
ua-persist = { workspace = true }
ua-search  = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
rust-embed = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
ua-core = { workspace = true }
